--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="30dp"
-                    android:text="@string/tine" />
+                    android:text="@string/tiny" />
 
                 <RadioButton
                     android:id="@+id/radioButton2"
